# ib-practica12-oop-gtests-exercism-DanielGlezDeChavesGonzalez

./: README.md  complejos_modificacion_prac.cc
complejo/: CMakeLists.txt
complejo/src/: complejo.cc  complejos_test.cc  funciones_complejo.cc  funciones_complejo.h
fechas/: CMakeLists.txt
fechas/src/: entrada.txt  fecha  fecha.cc  fecha_test.cc  fechas_test.cc  funciones_fecha.cc  funciones_fecha.h  pruebas.cc
